[gd_scene load_steps=9 format=3 uid="uid://ob0xog4a5nou"]

[ext_resource type="Script" uid="uid://c0wn5djm6miqj" path="res://script/hud.gd" id="1_o8u2p"]
[ext_resource type="FontFile" uid="uid://dhhp5qhhxgab" path="res://asset/Bonus/Font/Orbitron-ExtraBold-BF66babf320fac7.ttf" id="2_o8u2p"]
[ext_resource type="Texture2D" uid="uid://dbbnwot7in6jl" path="res://asset/PNG/Lives/Life.png" id="3_heart"]
[ext_resource type="Texture2D" uid="uid://08x0itqaowhc" path="res://asset/PNG/SettingsIcon.png" id="4_settings"]

[sub_resource type="LabelSettings" id="LabelSettings_nhyt6"]
font = ExtResource("2_o8u2p")
font_size = 15
shadow_size = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.498039)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.2, 0.6, 1.0, 1.0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.8, 1.0, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.2, 0.6, 1.0, 0.4)
shadow_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_boost"]
font = ExtResource("2_o8u2p")
font_size = 8
font_color = Color(0.5, 0.8, 1.0, 1.0)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8u2p")

[node name="ScoreBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = 51.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.498039)

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_top = 15.0
offset_right = 63.0
offset_bottom = 51.0
grow_horizontal = 2
text = "SCORE: 10000"
label_settings = SubResource("LabelSettings_nhyt6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LivesBG" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 15.0
offset_right = 120.0
offset_bottom = 51.0
color = Color(0, 0, 0, 0.498039)

[node name="LivesContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 115.0
offset_bottom = 51.0
alignment = 1

[node name="Heart1" type="TextureRect" parent="LivesContainer"]
layout_mode = 2
texture = ExtResource("3_heart")
stretch_mode = 3

[node name="Heart2" type="TextureRect" parent="LivesContainer"]
layout_mode = 2
texture = ExtResource("3_heart")
stretch_mode = 3

[node name="Heart3" type="TextureRect" parent="LivesContainer"]
layout_mode = 2
texture = ExtResource("3_heart")
stretch_mode = 3

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 15.0
offset_right = -10.0
offset_bottom = 51.0
grow_horizontal = 0
texture_normal = ExtResource("4_settings")
stretch_mode = 3

[node name="LaserIndicator" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 55.0
offset_right = 70.0
offset_bottom = 75.0
grow_horizontal = 2

[node name="ProgressBar" type="ProgressBar" parent="LaserIndicator"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="LaserIndicator"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 12.0
grow_horizontal = 2
text = "LASER BOOST"
label_settings = SubResource("LabelSettings_boost")
horizontal_alignment = 1
vertical_alignment = 1
